[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/scenes/world/tilemaps/TilemapController.gd" type="Script" id=1]
[ext_resource path="res://resources/grass.tres" type="TileSet" id=3]
[ext_resource path="res://game/scenes/world/tilemaps/TwoLevelTilemapLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/decoration_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://resources/walls.tres" type="TileSet" id=6]
[ext_resource path="res://game/scenes/world/tilemaps/TilemapLayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/water_reflection_mask.tres" type="TileSet" id=8]
[ext_resource path="res://game/scenes/world/tilemaps/ReflectionTilemapLayer.tscn" type="PackedScene" id=9]

[node name="TilemapController" type="Node2D"]
script = ExtResource( 1 )

[node name="FgNode" type="Node2D" parent="."]

[node name="GroundLayer" parent="FgNode" instance=ExtResource( 7 )]
tileset = ExtResource( 3 )
autotiler_cfg = "res://game_assets/tilemap_meta/ground_tilemap.json"

[node name="OvergroundLayer" parent="FgNode" instance=ExtResource( 7 )]

[node name="WallsTilemap" parent="FgNode" instance=ExtResource( 4 )]
tileset = ExtResource( 6 )
autotiler_cfg_0 = "res://game_assets/tilemap_meta/wall_tilemap_level_0.json"
autotiler_cfg_1 = "res://game_assets/tilemap_meta/wall_tilemap_level_1.json"

[node name="DecorationLayer" parent="FgNode" instance=ExtResource( 7 )]
tileset = ExtResource( 5 )
autotiler_cfg = "res://game_assets/tilemap_meta/decorations.json"

[node name="ReflectionTilemapLayer" parent="FgNode" instance=ExtResource( 9 )]
light_mask = 2
z_index = 11
z_as_relative = false
tileset = ExtResource( 8 )
autotiler_cfg = "res://game_assets/tilemap_meta/reflection_mask_blob.json"
